# AnyVer.py

./: .gitlab-ci.yml  AnyVer.py  ReadMe.md  setup.cfg
tests/: tests.py
