[metadata]
name = AnyVer
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/AnyVer.py
description = A very loose version parser
long_description = file: ReadMe.md
keywords = version, parsing
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = AnyVer
setup_requires = setuptools_scm;
